# django-library

./: .gitignore  pyproject.toml
config/: urls.py
config/settings/: base.py
